tests/baselines/reference/derivedStructWithPrivateStaticShadowingPublicStatic.errors.txt
tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructWithPrivateStaticShadowingPublicStatic.ts(20,10): error TS20018: Property 'x' is private and only accessible within struct 'Derived'.
tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructWithPrivateStaticShadowingPublicStatic.ts(23,10): error TS20018: Property 'fn' is private and only accessible within struct 'Derived'.


==== tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructWithPrivateStaticShadowingPublicStatic.ts (2 errors) ====
    // doc 2.3
    
    struct Base {
        public static x: string;
        public static fn(): string {
            return '';
        }
    }
    
    struct Derived extends Base {
        private static x: string; 
        private static fn(): string {
            return '';
        }
    }
    
    var b: typeof Base;
    var d: typeof Derived;
    var r = b.x; // ok
    var r2 = d.x; // error
             ~~~
!!! error TS20018: Property 'x' is private and only accessible within struct 'Derived'.
    
    var r3 = b.fn(); // ok
    var r4 = d.fn(); // error
             ~~~~
!!! error TS20018: Property 'fn' is private and only accessible within struct 'Derived'.